updated 'about' page

--- a/templates/about.html
+++ b/templates/about.html
@@ -22,22 +22,14 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe
-          nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis
-          sit soluta odio, adipisci quas excepturi maxime quae totam ducimus
-          consectetur?
+          Hi, I’m Avish (or Ave ;) )!
+          I’m an aeronautical engineering student at Imperial College London, passionate about blending technology, problem-solving, and creativity. My work spans everything from designing control systems for drones to developing components for racing cars, and I’m always looking for ways to merge mechanical engineering with cutting-edge software. I’m also actively learning and developing software, exploring new technologies, and expanding my coding skills in areas like AI, web development, and automation.
         </p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius
-          praesentium recusandae illo eaque architecto error, repellendus iusto
-          reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in
-          officia voluptas voluptatibus, minus!
+          When I’m not immersed in engineering or software projects, you’ll find me competing in tennis (I’m a national champion!), or training in Muay Thai, boxing, and football at a competitive level. I also enjoy staying active with volleyball, swimming, and mountain climbing when I get the chance.
         </p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut
-          consequuntur magnam, excepturi aliquid ex itaque esse est vero natus
-          quae optio aperiam soluta voluptatibus corporis atque iste neque sit
-          tempora!
+          Fluent in English, French, and Mauritian Creole, I’m always keen to share what I’m learning, whether it’s about tech, engineering, or my sports experiences. This blog is where I combine my passions for innovation, tech, and an active lifestyle. Thanks for stopping by—I’m excited to share my journey with you!
         </p>
       </div>
     </div>
